# cryptobot_v4

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
docs/: KULLANIM.md
examples/: config.example.json
src/cryptobot/: __init__.py  __main__.py  cli.py  dotenv.py  fetch.py
src/cryptobot/backtest/: __init__.py  replay.py  runner.py
src/cryptobot/exchange/: __init__.py  binance_rest.py  binance_ws.py  fills.py  filters.py  http.py  market_data.py
src/cryptobot/execution/: __init__.py  gates.py  orderbook.py  pnl.py
src/cryptobot/indicators/: __init__.py  adr.py  adx.py  rsi.py  rsi_vwma.py
src/cryptobot/market/: __init__.py  candle.py  validation.py
src/cryptobot/runtime/: __init__.py  live.py  metrics.py  orchestrator.py  paper.py  ports.py  providers.py  service.py  status_server.py
src/cryptobot/strategy/: __init__.py  engine.py  entry.py  exit.py  indicators.py  parameters.py  position.py
tests/: _helpers.py  test_adr.py  test_adx.py  test_backtest.py  test_binance_rest.py  test_binance_ws.py  test_cli.py  test_dotenv.py  test_engine.py  test_entry.py  test_exit.py  test_fetch.py  test_fills.py  test_filters.py  test_gates.py  test_live.py  test_market_data.py  test_metrics.py  test_paper.py  test_parameters.py  test_pnl.py  test_position.py  test_providers.py  test_rsi.py  test_rsi_vwma.py  test_runtime.py  test_service.py  test_status_server.py  test_validation.py  test_withdrawal.py
